fix image size on mobile resolution

--- a/css/style.css
+++ b/css/style.css
@@ -347,4 +347,20 @@ footer {
         width: 20%;
         margin-left: auto;
     }
+
+    .messenger img {
+        width: 90px;
+    }
+
+    .imgright {
+        float: none;
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .imgleft {
+        float: none;
+        margin-left: auto;
+        margin-right: auto;
+    }
 }
